Fix multi-selection on "Browse Publications" dialog.
See #48. Command/Control-clicking worked fine but shift clicking was messed up. Divs in divs caused the problem. Adjust the inner div to a span and things work fine.

--- a/views/index.css
+++ b/views/index.css
@@ -608,7 +608,8 @@ div {user-select: none;}
     border: 1px solid #999;
     margin: 4px 0;
 }
-.list div div {
+.list div span, .list div div {
+    display: block;
     cursor: pointer !important;
     padding: 2px 4px;
 }
